[package]
name = "themis-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
futures = { version = "0.3.30" }
lazy_static = "1.5.0"
log = "0.4"
regex = { version = "1.10" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
reqwest-chain = "1.0.0"
reqwest-leaky-bucket = { version = "0.3.0" }
reqwest-middleware = { version = "0.4.0" }
reqwest-retry = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-jsonlines = { version = "0.7.0" }
tokio = { version = "1.35.0", features = ["macros"] }
