[package]
name = "themis-extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-jsonlines = { version = "0.7.0" }
