[package]
name = "themis-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = { version = "0.7.0" }
actix-web = { version = "4.4" }
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["chrono", "postgres", "r2d2"] }
env_logger = { version = "0.10.1" }
rand = { version = "0.8.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.6.0", features = ["chrono_0_4"] }
serde_yaml = { version = "0.9" }
