[project]
name = "themis_embeddings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=22.0.0",
    "pygraphviz>=1.14",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
